--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
+    "raw-loader": "^4.0.2",
     "style-loader": "^4.0.0",
-    "svg-inline-loader": "^0.8.2",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
